# webhook_server_rust

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  setup_ec2.sh  test_webhook.sh  trading-webhook.service
src/: main.rs
